# iniparser

./: .cmake-format.py  .gitignore  .gitlab-ci.yml  .gitmessage  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  FAQ-en.md  FAQ-zhcn.md  INSTALL  IniparserConfig.cmake.in  LICENSE  Makefile  Makefile.am  README  README.md  README.mk  bootstrap.sh  config.h.in  configure.ac  configure.scan  iniparser.pc
.clusterfuzzlite/: Dockerfile  build.sh  fuzzer.c
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: disable-pull-requests.yml  trigger-gitlab-ci.yml  ubuntu.yml
cmake/: config.cmake.in  pc.in
doc/: CMakeLists.txt  Makefile  Makefile.am  SUBPACKAGE.txt  iniparser.dox  iniparser.dox.in  iniparser.main  iniparser.txt
example/: CMakeLists.txt  Makefile  Makefile.am  iniexample.c  iniwrite.c  linebylineexample.c  parse.c  superimposeexample.c
html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  index.html  iniparser_8h.html  iniparser_8main.html
src/: CMakeLists.txt  Makefile.am  dictionary.c  dictionary.h  diff_LOAD_IMPOSE.txt  iniparser.c  iniparser.h  libiniparser.pc.in
src/win32/: unistd.h
test/: AllTests.c  CMakeLists.txt  CuTest.c  CuTest.h  Makefile  Makefile.am  iniexample.c  make-tests.sh  parse.c  parse_array.c  test.c  test_dictionary.c  test_iniparser.c  twisted-arrays.ini  unity-config.yml  unity_config.h
test/ressources/: gruezi.ini  old.ini  quotes.ini  utf8.ini
test/ressources/bad_ini/: bad_parse_1.ini  bad_parse_2.ini  bad_parse_3.ini  bad_quotes_1.ini  bad_quotes_2.ini  bad_quotes_3.ini  bad_quotes_4.ini  ends_well.ini  twisted-errors.ini
test/ressources/good_ini/: spaced.ini  spaced2.ini  twisted.ini
